objects/BMCServiceDesk__SYSknowSearchField__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__DisplayOrder__c</fullName>
        <description>The column position when search is displayed</description>
        <label>DisplayOrder</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FieldName__c</fullName>
        <label>FieldName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsSearchField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSearchField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Solution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solution</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>